--- a/dsa474.md
+++ b/dsa474.md
@@ -29,3 +29,23 @@ strs[i] consists only of digits '0' and '1'.
 1 <= m, n <= 100
 
 ---
+
+
+```cpp
+class Solution {
+public:
+    int findMaxForm(vector<string>& strs, int m, int n) {
+        auto &n0 = m, &n1 = n;
+        array<array<int, 101>, 101> dp{};
+        for (auto& str : strs) { 
+            int a0 = ranges::count(str, '0');
+            int a1 = str.size() - a0;
+            for (int i = m; i >= a0; --i)
+                for (int j = n; j >= a1; --j) {
+                    dp[i][j] = max(dp[i][j], 1 + dp[i - a0][j - a1]);
+                }
+        }
+        return dp[m][n];
+    }
+};
+```
