--- a/dsa3228.md
+++ b/dsa3228.md
@@ -38,3 +38,20 @@ Constraints:
 s[i] is either '0' or '1'.
 
 ---
+
+
+```cpp
+class Solution {
+public:
+    int maxOperations(string s) {
+        int need = 0, ans = 0;
+        for (int i = 0; i < s.size()-1; i++) {
+            if (s[i] == '1') need++;
+            if (s[i] == '0' && s[i+1] == '1') ans += need;
+        }
+        if (s[s.size() - 1] == '0') ans += need;
+        return ans;
+    }
+};
+
+```
