Fix formatting of queries length constraint

--- a/dsa2536.md
+++ b/dsa2536.md
@@ -28,7 +28,7 @@ Explanation: The diagram above shows the initial matrix and the matrix after the
 Constraints:
 
 - 1 <= n <= 500
-- 1 <= queries.length <= 104
+- 1 <= queries.length <= 10^4
 - 0 <= row1i <= row2i < n
 - 0 <= col1i <= col2i < n
 
