--- a/dsa2536.md
+++ b/dsa2536.md
@@ -33,3 +33,27 @@ Constraints:
 - 0 <= col1i <= col2i < n
 
 ---
+
+```cpp
+class Solution {
+public:
+    vector<vector<int>> rangeAddQueries(int n, vector<vector<int>>& queries) {
+        vector<vector<int>> dp(n, vector<int>(n));
+        for(vector<int> v:queries)
+        {
+            for(int i=v[0];i<=v[2];i++)
+            {
+                dp[i][v[1]]+=1;
+                if(v[3]<n-1)
+                dp[i][v[3]+1]-=1;
+            }
+        }
+        for(int i=0;i<n;i++)
+        {
+            for(int j=1;j<n;j++)
+            dp[i][j]+=dp[i][j-1];
+        }
+        return dp;
+    }
+};
+```
