Implement numSub method in Solution class
Added a C++ class Solution with a method to count substrings of '1's in a binary string.

--- a/dsa1513.md
+++ b/dsa1513.md
@@ -29,3 +29,28 @@ Constraints:
 s[i] is either '0' or '1'.
 
 ---
+
+```cpp
+class Solution {
+public:
+    int numSub(string s) 
+    {
+        long long int ans = 0, count = 0;
+        int mod = 1000000007;        
+        for(int i=0; i<s.size(); i++)
+        {
+            if(s[i] == '0')
+            {
+                ans += ( (count * (count + 1)) / 2);
+                count = 0;
+            }
+            else
+                count++;
+        }
+        
+        ans += ( (count * (count + 1)) / 2);
+        
+        return ans % mod;
+    }
+};
+```
