--- a/dsa2154.md
+++ b/dsa2154.md
@@ -33,3 +33,19 @@ Constraints:
 1 <= nums[i], original <= 1000
 
 ---
+
+```cpp
+class Solution {
+public:
+    int findFinalValue(vector<int>& nums, int original) {
+        sort(nums.begin(), nums.end());
+        for(int i = 0; i < nums.size(); i++ ){
+            if (original == nums[i]){
+                    original = original * 2;
+            }
+        }
+             return original;
+       
+    }
+};
+```
