--- a/dsa757.md
+++ b/dsa757.md
@@ -34,3 +34,35 @@ Constraints:
 intervals[i].length == 2
 0 <= starti < endi <= 10^8
 ---
+
+
+```cpp
+class Solution {
+public:
+    int intersectionSizeTwo(vector<vector<int>>& intervals) {
+        sort(intervals.begin(), intervals.end(),
+            [](const vector<int>& a, const vector<int>& b) {
+                return a[1] < b[1] || (a[1] == b[1] && a[0] > b[0]);
+            }
+        );
+
+        int res = 0, p1 = -1, p2 = -1;
+        for (auto &in : intervals) {
+            int start = in[0], end = in[1];
+
+            if (start <= p1) continue;
+            if (start > p2) {
+                p1 = end - 1;
+                res += 2;
+            } else {
+                p1 = p2;
+                res++;
+            }
+            p2 = end;
+        }
+        return res;
+    }
+};
+
+
+```
