--- a/dsa1262.md
+++ b/dsa1262.md
@@ -26,3 +26,64 @@ Constraints:
 1 <= nums[i] <= 10^4
 
 ---
+
+
+```cpp
+#include <bits/stdc++.h>
+using namespace std;
+
+class Solution {
+public:
+    int maxSumDivThree(vector<int>& nums) {
+        long long sum = 0;
+        
+        long long INF = LLONG_MAX / 4;
+        long long r1_small1 = INF, r1_small2 = INF;
+        long long r2_small1 = INF, r2_small2 = INF;
+
+        for (int x : nums) {
+            sum += x;
+            int mod = x % 3;
+            if (mod < 0) mod += 3; 
+
+            if (mod == 1) {
+                if (x < r1_small1) {
+                    r1_small2 = r1_small1;
+                    r1_small1 = x;
+                } else if (x < r1_small2) {
+                    r1_small2 = x;
+                }
+            } else if (mod == 2) {
+                if (x < r2_small1) {
+                    r2_small2 = r2_small1;
+                    r2_small1 = x;
+                } else if (x < r2_small2) {
+                    r2_small2 = x;
+                }
+            }
+        }
+
+        if (sum % 3 == 1) {
+            long long option1 = r1_small1;                 // remove smallest remainder-1
+            long long option2 = (r2_small1 < INF && r2_small2 < INF)
+                                 ? r2_small1 + r2_small2     // remove two remainder-2
+                                 : INF;
+            long long remove = min(option1, option2);
+            if (remove >= INF) return 0; // no valid way to make divisible by 3
+            sum -= remove;
+        } else if (sum % 3 == 2) {
+            long long option1 = r2_small1;                 // remove smallest remainder-2
+            long long option2 = (r1_small1 < INF && r1_small2 < INF)
+                                 ? r1_small1 + r1_small2     // remove two remainder-1
+                                 : INF;
+            long long remove = min(option1, option2);
+            if (remove >= INF) return 0;
+            sum -= remove;
+        }
+
+        return static_cast<int>(sum);
+    }
+};
+
+
+```
