--- a/dsa1018.md
+++ b/dsa1018.md
@@ -26,3 +26,46 @@ Constraints:
 nums[i] is either 0 or 1.
 
 ---
+
+```cpp
+class Solution {
+public:
+    vector<bool> prefixesDivBy5(vector<int>& nums) {
+
+        int n = nums.size();
+        vector<bool> ans(n, false);
+
+        int i;
+
+        
+        for(i = 0; i < n; i++)
+        {
+            if(nums[i] == 0)
+            {
+                ans[i] = true;        
+            }
+            else break;               
+        }
+
+        long long val = 0;            
+
+        
+        for(int j = i; j < n; j++)
+        {            
+            if(nums[j] == 1)
+            {
+                val = (val * 2 + 1) % 5;
+            }
+            else
+            {
+                val = (val * 2) % 5;
+            }            
+            if(val % 5 == 0)
+                ans[j] = true;
+        }
+
+        return ans;
+    }
+};
+
+```
