--- a/dsa3512.md
+++ b/dsa3512.md
@@ -44,3 +44,15 @@ Constraints:
 1 <= k <= 100
 
 ---
+
+```cpp
+class Solution {
+public:
+    int minOperations(vector<int>& nums, int k) {
+        long long sum = 0;
+        for(int x : nums) sum += x;
+        return sum % k;
+    }
+};
+
+```
