--- a/dsa1590.md
+++ b/dsa1590.md
@@ -31,3 +31,38 @@ Constraints:
 1 <= p <= 10^9
 
 ---
+
+
+```cpp
+class Solution {
+public:
+    int minSubarray(vector<int>& nums, int p) {
+        int n = nums.size();
+        long long total = 0;
+        for (int num : nums) total += num;
+        
+        if (total % p == 0) return 0;
+        
+        int target = total % p;
+        unordered_map<int, int> prefixMod;
+        prefixMod[0] = -1;
+        
+        long long prefix = 0;
+        int minLength = n;
+        
+        for (int i = 0; i < n; i++) {
+            prefix += nums[i];
+            int currentMod = prefix % p;
+            int neededMod = (currentMod - target + p) % p;
+            
+            if (prefixMod.count(neededMod)) {
+                minLength = min(minLength, i - prefixMod[neededMod]);
+            }
+            
+            prefixMod[currentMod] = i;
+        }
+        
+        return minLength == n ? -1 : minLength;
+    }
+};
+```
