--- a/dsa2141.md
+++ b/dsa2141.md
@@ -39,3 +39,43 @@ Constraints:
 1 <= batteries[i] <= 10^9
 
 ---
+
+```cpp
+
+class Solution {
+public:
+  
+    bool canRun(long long T, int n, vector<int>& batteries) {
+        long long total = 0;
+       
+        for (int b : batteries) {
+            total += min((long long)b, T);
+            
+            if (total >= n * T) return true;
+        }
+        return total >= n * T;
+    }
+    
+    long long maxRunTime(int n, vector<int>& batteries) {
+        long long left = 0, right = 0;
+        
+        
+        for (int b : batteries) right += b;
+        right /= n;
+        
+        long long ans = 0;
+        
+        
+        while (left <= right) {
+            long long mid = left + (right - left) / 2;
+            if (canRun(mid, n, batteries)) {
+                ans = mid;
+                left = mid + 1;
+            } else {
+                right = mid - 1;
+            }
+        }
+        return ans;
+    }
+};
+```
