--- a/dsa3623.md
+++ b/dsa3623.md
@@ -46,3 +46,39 @@ All points are pairwise distinct.
 
 
 ---
+
+
+```cpp
+
+class Solution {
+public:
+    int countTrapezoids(vector<vector<int>>& points) {
+        long long mod = 1000000007;
+        unordered_map<int, int> yCount;
+        
+        for (auto& p : points) yCount[p[1]]++;
+        
+        vector<long long> pairs;
+        for (auto& [y, cnt] : yCount) {
+            if (cnt >= 2) pairs.push_back((long long)cnt * (cnt - 1) / 2);
+        }
+        
+        int n = pairs.size();
+        if (n < 2) return 0;
+        
+        // Using prefix sums instead
+        vector<long long> prefix(n, 0);
+        prefix[0] = pairs[0];
+        for (int i = 1; i < n; i++) prefix[i] = (prefix[i-1] + pairs[i]) % mod;
+        
+        long long ans = 0;
+        for (int i = 1; i < n; i++) {
+            ans = (ans + pairs[i] * prefix[i-1]) % mod;
+        }
+        
+        return ans;
+    }
+};
+
+
+```
