--- a/dsa3625.md
+++ b/dsa3625.md
@@ -42,3 +42,69 @@ Constraints:
 All points are pairwise distinct.
 
 ---
+
+```cpp
+class Solution {
+public:
+    int hashSlope(int a,int b){
+        return a*4003+b;
+    }
+
+    int countTrapezoids(vector<vector<int>>& points) {
+        int n= points.size();
+
+        unordered_map<int,unordered_map<int,int>> m;
+        unordered_map<int,unordered_map<int,map<int,int>>> m2;
+
+        for(int i=0;i<n;i++){
+            int x0=points[i][0], y0=points[i][1];
+            for(int j=i+1;j<n;j++){
+                int x1=points[j][0], y1=points[j][1];
+
+                int a = y1-y0, b = x0-x1;
+                int len = a*a + b*b;
+
+                if(a<0) a=-a, b=-b;
+
+                if(a*b==0){
+                    if(a==0) b=1;
+                    else a=1;
+                } else {
+                    int g = gcd(abs(a),abs(b));
+                    a/=g; b/=g;
+                }
+
+                int c = a*x0 + b*y0;
+                int h = hashSlope(a,b);
+
+                m[h][c]++;
+                m2[h][c][len]++;
+            }
+        }
+
+        int total = 0;
+        for(auto &p : m){
+            int prev = 0;
+            for(auto &q : p.second){
+                total += q.second * prev;
+                prev += q.second;
+            }
+        }
+
+        int same = 0;
+        for(auto &p : m2){
+            map<int,int> prev;
+            for(auto &q : p.second){
+                for(auto &r : q.second){
+                    same += r.second * prev[r.first];
+                    prev[r.first] += r.second;
+                }
+            }
+        }
+
+        return total - same/2;
+    }
+};
+
+
+```
