--- a/dsa3432.md
+++ b/dsa3432.md
@@ -51,3 +51,18 @@ Constraints:
 1 <= nums[i] <= 100
 
 ---
+
+```cpp
+class Solution {
+public:
+    int countPartitions(vector<int>& nums) {
+        int odd_count = 0;
+        for (int x : nums) {
+            if (x % 2 != 0) odd_count++;
+        }
+        if (odd_count % 2 != 0) return 0;
+        return nums.size() - 1;
+    }
+};
+
+```
