--- a/dsa1523.md
+++ b/dsa1523.md
@@ -20,3 +20,15 @@ Constraints:
 0 <= low <= high <= 10^9
 
 ---
+
+```cpp
+class Solution {
+public:
+    int countOdds(int low, int high) {
+        int odd = (high - low)/2;
+        if(low % 2 || high % 2)
+            odd++;
+        return odd;
+    }
+};
+```
