--- a/dsa3583.md
+++ b/dsa3583.md
@@ -64,3 +64,35 @@ Constraints:
 0 <= nums[i] <= 10^5
 
 ---
+
+
+```cpp
+class Solution {
+public:
+    int specialTriplets(vector<int>& nums) {
+        const int MOD = 1e9 + 7;
+        const int MAX_VAL = 100000;
+        
+        vector<long long> cnt(MAX_VAL + 1, 0);
+        vector<long long> pairs(MAX_VAL + 1, 0);
+        long long tuples = 0;
+        
+        for (int x : nums) {
+            
+            if (x % 2 == 0) {
+                tuples += pairs[x / 2];
+            }           
+            
+            if (x * 2LL <= MAX_VAL) {
+                pairs[x] += cnt[x * 2];
+            }
+            
+            
+            cnt[x]++;
+        }
+        
+        return tuples % MOD;
+    }
+};
+
+```
