--- a/dsa3583.md
+++ b/dsa3583.md
@@ -69,29 +69,20 @@ Constraints:
 ```cpp
 class Solution {
 public:
-    int specialTriplets(vector<int>& nums) {
-        const int MOD = 1e9 + 7;
-        const int MAX_VAL = 100000;
-        
-        vector<long long> cnt(MAX_VAL + 1, 0);
-        vector<long long> pairs(MAX_VAL + 1, 0);
-        long long tuples = 0;
-        
-        for (int x : nums) {
-            
-            if (x % 2 == 0) {
-                tuples += pairs[x / 2];
-            }           
-            
-            if (x * 2LL <= MAX_VAL) {
-                pairs[x] += cnt[x * 2];
-            }
-            
-            
-            cnt[x]++;
+    long long specialTriplets(vector<int>& nums) {
+        const long long MOD = 1e9 + 7;
+        unordered_map<int,long long> right, left;
+        for (int x : nums) right[x]++;
+
+        long long ans = 0;
+        for (int j = 0; j < nums.size(); j++) {
+            int mid = nums[j];
+            right[mid]--;
+            long long need = mid * 2;
+            ans = (ans + (left[need] * right[need]) % MOD) % MOD;
+            left[mid]++;
         }
-        
-        return tuples % MOD;
+        return ans;
     }
 };
 
