--- a/dsa3577.md
+++ b/dsa3577.md
@@ -51,3 +51,29 @@ Constraints:
 1 <= complexity[i] <= 10^9
 
 ---
+
+
+```cpp
+class Solution {
+public:
+    static const long long MOD = 1e9 + 7;
+    long long factorial(long long n) {
+        long long res = 1;
+        for (long long i = 1; i <= n; i++)
+            res = (res * i) % MOD;
+        return res;
+    }
+    int countPermutations(vector<int>& complexity) {
+        int n = complexity.size();
+        long long mn = complexity[0];
+        for (int i = 1; i < n; i++) {
+            if (mn >= complexity[i]) {
+                return 0;
+            }
+            mn = min(mn, (long long)complexity[i]);
+        }
+        return factorial(n - 1);
+    }
+};
+
+```
