--- a/dsa3531.md
+++ b/dsa3531.md
@@ -64,56 +64,44 @@ All coordinates of buildings are unique.
 
 ```cpp
 
-class Solution 
-{
+class Solution {
 public:
-    long long maxSubarrays(int n, vector<vector<int>>& conflictingPairs) 
-    {
-        
-        vector<vector<int>> conflicts(n + 2);
-        for (const auto& pair : conflictingPairs) 
-        {
-            int a = pair[0];
-            int b = pair[1];
-        
-            
-            if (a < b) 
-            {
-                conflicts[b].push_back(a);
-            } 
-            else 
-            {
-                conflicts[a].push_back(b);
-            }
-        }        
-        int maxLeft = 0;
-        int secondMaxLeft = 0;
-        vector<long long> gains(n + 2, 0);
-        long long validSubarrays = 0;        
-        for (int right = 1; right <= n; ++right) 
-        {
-            for (int left : conflicts[right]) 
-            {
-                if (left > maxLeft) 
-                {
-                    secondMaxLeft = maxLeft;
-                    maxLeft = left;
-                } 
-                else if (left > secondMaxLeft) 
-                {
-                    secondMaxLeft = left;
-                }
-            }
+    int countCoveredBuildings(int n, vector<vector<int>>& buildings) {
 
-           
-            validSubarrays += right - maxLeft;
-            
-            gains[maxLeft] += maxLeft - secondMaxLeft;
+        unordered_map<int, vector<int>> rowMap;
+        unordered_map<int, vector<int>> colMap;
+
+        
+        for (auto &b : buildings) {
+            rowMap[b[0]].push_back(b[1]);
+            colMap[b[1]].push_back(b[0]);
         }
 
-        
-        long long maxGain = *max_element(gains.begin(), gains.end());
-        return validSubarrays + maxGain;
+        int result = 0;
+
+        for (auto &b : buildings) {
+            int x = b[0], y = b[1];
+
+            bool left = false, right = false;
+            bool up = false, down = false;
+
+            // Check row for left/right
+            for (int col : rowMap[x]) {
+                if (col < y) left = true;
+                if (col > y) right = true;
+            }
+
+            // Check column for up/down
+            for (int row : colMap[y]) {
+                if (row < x) up = true;
+                if (row > x) down = true;
+            }
+
+            if (left && right && up && down)
+                result++;
+        }
+
+        return result;
     }
 };
 
