--- a/dsa3531.md
+++ b/dsa3531.md
@@ -64,44 +64,82 @@ All coordinates of buildings are unique.
 
 ```cpp
 
+#include <vector>
+#include <algorithm>
+#include <unordered_map>
+using namespace std;
+
 class Solution {
 public:
     int countCoveredBuildings(int n, vector<vector<int>>& buildings) {
-
+        
         unordered_map<int, vector<int>> rowMap;
         unordered_map<int, vector<int>> colMap;
-
         
-        for (auto &b : buildings) {
+        
+        for (auto& b : buildings) {
             rowMap[b[0]].push_back(b[1]);
             colMap[b[1]].push_back(b[0]);
         }
-
-        int result = 0;
-
-        for (auto &b : buildings) {
-            int x = b[0], y = b[1];
-
-            bool left = false, right = false;
-            bool up = false, down = false;
-
-            // Check row for left/right
-            for (int col : rowMap[x]) {
-                if (col < y) left = true;
-                if (col > y) right = true;
-            }
-
-            // Check column for up/down
-            for (int row : colMap[y]) {
-                if (row < x) up = true;
-                if (row > x) down = true;
-            }
-
-            if (left && right && up && down)
-                result++;
+        
+        
+        for (auto& [row, cols] : rowMap) {
+            sort(cols.begin(), cols.end());
         }
-
-        return result;
+        for (auto& [col, rows] : colMap) {
+            sort(rows.begin(), rows.end());
+        }
+        
+        int count = 0;
+        
+    
+        for (auto& b : buildings) {
+            int x = b[0];
+            int y = b[1];
+            
+            
+            bool left = false;
+            if (rowMap.count(x)) {
+                auto& cols = rowMap[x];
+                
+                auto it = lower_bound(cols.begin(), cols.end(), y);
+                if (it != cols.begin()) left = true;
+            }
+            
+           
+            bool right = false;
+            if (rowMap.count(x)) {
+                auto& cols = rowMap[x];
+               
+                auto it = upper_bound(cols.begin(), cols.end(), y);
+                if (it != cols.end()) right = true;
+            }
+            
+            
+            bool up = false;
+            if (colMap.count(y)) {
+                auto& rows = colMap[y];
+               
+                auto it = lower_bound(rows.begin(), rows.end(), x);
+                if (it != rows.begin()) up = true;
+            }
+            
+            
+            bool down = false;
+            if (colMap.count(y)) {
+                auto& rows = colMap[y];
+                
+                auto it = upper_bound(rows.begin(), rows.end(), x);
+                if (it != rows.end()) down = true;
+            }
+            
+            
+            if (left && right && up && down) {
+                count++;
+            }
+        }
+        
+        return count;
     }
 };
 
