--- a/dsa3606.md
+++ b/dsa3606.md
@@ -1,1 +1,116 @@
+# 3606. Coupon Code Validator
+You are given three arrays of length n that describe the properties of n coupons: code, businessLine, and isActive. The ith coupon has:
 
+code[i]: a string representing the coupon identifier.
+businessLine[i]: a string denoting the business category of the coupon.
+isActive[i]: a boolean indicating whether the coupon is currently active.
+A coupon is considered valid if all of the following conditions hold:
+
+code[i] is non-empty and consists only of alphanumeric characters (a-z, A-Z, 0-9) and underscores (_).
+businessLine[i] is one of the following four categories: "electronics", "grocery", "pharmacy", "restaurant".
+isActive[i] is true.
+Return an array of the codes of all valid coupons, sorted first by their businessLine in the order: "electronics", "grocery", "pharmacy", "restaurant", and then by code in lexicographical (ascending) order within each category.
+
+ 
+
+Example 1:
+
+Input: code = ["SAVE20","","PHARMA5","SAVE@20"], businessLine = ["restaurant","grocery","pharmacy","restaurant"], isActive = [true,true,true,true]
+
+Output: ["PHARMA5","SAVE20"]
+
+Explanation:
+
+First coupon is valid.
+Second coupon has empty code (invalid).
+Third coupon is valid.
+Fourth coupon has special character @ (invalid).
+Example 2:
+
+Input: code = ["GROCERY15","ELECTRONICS_50","DISCOUNT10"], businessLine = ["grocery","electronics","invalid"], isActive = [false,true,true]
+
+Output: ["ELECTRONICS_50"]
+
+Explanation:
+
+First coupon is inactive (invalid).
+Second coupon is valid.
+Third coupon has invalid business line (invalid).
+ 
+
+Constraints:
+
+n == code.length == businessLine.length == isActive.length
+1 <= n <= 100
+0 <= code[i].length, businessLine[i].length <= 100
+code[i] and businessLine[i] consist of printable ASCII characters.
+isActive[i] is either true or false.
+
+
+
+---
+
+
+```cpp
+class Solution {
+public:
+    bool isValid(string &s) {
+        if (s.empty()) return false;
+        for (char ch : s) {
+            if (ch == '_') continue;
+            if (!isalnum(ch)) return false;
+        }
+        return true;
+    }
+
+    bool isValidCategory(string &cat) {
+        return cat == "electronics" ||
+               cat == "grocery" ||
+               cat == "pharmacy" ||
+               cat == "restaurant";
+    }
+
+    static int priority(const string &cat) {
+        if (cat == "electronics") return 0;
+        if (cat == "grocery")     return 1;
+        if (cat == "pharmacy")    return 2;
+        return 3; 
+    }
+
+    static bool comp(const pair<string,string> &a,
+                     const pair<string,string> &b) {
+        int pa = priority(a.first);
+        int pb = priority(b.first);
+
+        if (pa != pb)
+            return pa < pb;
+
+        return a.second < b.second;
+    }
+
+    vector<string> validateCoupons(vector<string>& code,
+                                   vector<string>& businessLine,
+                                   vector<bool>& isActive) {
+
+        vector<pair<string,string>> data;
+
+        for (int i = 0; i < code.size(); i++) {
+            if (isValid(code[i]) &&
+                isValidCategory(businessLine[i]) &&
+                isActive[i]) {
+
+                data.push_back({businessLine[i], code[i]});
+            }
+        }
+
+        sort(data.begin(), data.end(), comp);
+
+        vector<string> res;
+        for (auto &it : data) {
+            res.push_back(it.second);
+        }
+
+        return res;
+    }
+};
+```
