--- a/dsa2110.md
+++ b/dsa2110.md
@@ -33,3 +33,27 @@ Constraints:
 1 <= prices[i] <= 10^5
  
 ---
+
+```cpp
+class Solution {
+public:
+    long long getDescentPeriods(vector<int>& prices) {
+        long long ans = 0;
+        long long temp = 0;
+        int n = prices.size();
+        
+        for (int i = 1; i < n; i++) {
+            if (prices[i - 1] - prices[i] == 1) {
+                temp++;
+                ans += temp;
+            } else {
+                temp = 0;
+            }
+        }
+        
+        ans += n;
+        return ans;
+    }
+};
+
+```
