--- a/dsa3562.md
+++ b/dsa3562.md
@@ -74,16 +74,16 @@ The total cost becomes 5 + 1 + 1 = 7 <= budget. Thus, the maximum total profit a
 
 Constraints:
 
-1 <= n <= 160
-present.length, future.length == n
-1 <= present[i], future[i] <= 50
-hierarchy.length == n - 1
-hierarchy[i] == [ui, vi]
-1 <= ui, vi <= n
-ui != vi
-1 <= budget <= 160
-There are no duplicate edges.
-Employee 1 is the direct or indirect boss of every employee.
-The input graph hierarchy is guaranteed to have no cycles.
+- 1 <= n <= 160
+- present.length, future.length == n
+- 1 <= present[i], future[i] <= 50
+- hierarchy.length == n - 1
+- hierarchy[i] == [ui, vi]
+- 1 <= ui, vi <= n
+- ui != vi
+- 1 <= budget <= 160
+- There are no duplicate edges.
+- Employee 1 is the direct or indirect boss of every employee.
+- The input graph hierarchy is guaranteed to have no cycles.
 
 ---
