--- a/dsa3074.md
+++ b/dsa3074.md
@@ -34,21 +34,20 @@ The input is generated such that it's possible to redistribute packs of apples i
 ```cpp
 class Solution {
 public:
-    int minimumBoxes(vector<int>& a, vector<int>& c) {
-        int ans=0;
-        int s=0;
-        for(auto i:a)
-            s=s+i;
-        sort(c.begin(),c.end());
-        int i=c.size()-1;
-        while(i>=0) {
-            s=s-c[i];
-            ans++;
-            if(s<=0)
-                break;
-            i--;
+    int minimumBoxes(vector<int>& apple, vector<int>& capacity) {
+        int total = 0;
+        for(int i = 0; i<apple.size();i++) {
+            total += apple[i];
         }
-        return ans;
+        int count = 0;
+        sort(capacity.begin(),capacity.end());
+        for(int i = capacity.size() - 1; i >= 0; i--) {
+            if(total > 0) {
+                total -= capacity[i];
+                count++;
+            }
+        }
+        return count;
     }
 };
 ```
