--- a/dsa3075.md
+++ b/dsa3075.md
@@ -46,18 +46,21 @@ Constraints:
 
 class Solution {
 public:
-    long long maximumHappinessSum(vector<int>& happiness, int k) {
-        sort(happiness.begin(), happiness.end());
-        long long res = 0;
-        int count = 0;
-        for (int i = happiness.size() - 1; i >= happiness.size() - k; --i) {
-            if (happiness[i] - count > 0) {
-                res += (long long)(happiness[i] - count);
-            }
-            count++;
+    long long maximumHappinessSum(vector<int>& v, int k) {
+        sort(v.begin(),v.end());
+        long long ans = 0;
+        int n=v.size()-1;
+        int c=0;
+        while(n>=0 && k>0) {
+            if(v[n]-c>=0)
+                ans=ans+v[n]-c;
+            else
+                break;
+            c++;
+            n--;
+            k--;
         }
-        return res;
+        return ans;
     }
 };
-
 ```
