--- a/dsa1351.md
+++ b/dsa1351.md
@@ -16,12 +16,42 @@ Output: 0
 
 Constraints:
 
-m == grid.length
-n == grid[i].length
-1 <= m, n <= 100
--100 <= grid[i][j] <= 100
+- m == grid.length
+- n == grid[i].length
+- 1 <= m, n <= 100
+- -100 <= grid[i][j] <= 100
  
 
-Follow up: Could you find an O(n + m) solution?
+
 
 ---
+
+
+```cpp
+
+class Solution {
+public:
+    static int countNegativesHelper(const vector<int>& vec) {
+        int low = 0;
+        int high = vec.size() - 1;
+        while (low <= high) {
+            int mid = low + (high - low) / 2;
+            if (vec[mid] >= 0) {                
+                low = mid + 1;
+            } else {                
+                high = mid - 1;
+            }
+        }
+        return vec.size() - high - 1;
+    }
+
+    int countNegatives(vector<vector<int>>& grid) {
+        int count = 0;
+        for (int i=0; i<grid.size(); i++) {
+            count += countNegativesHelper(grid[i]);
+        }
+        return count;
+    }
+};
+
+```
