--- a/dsa840.md
+++ b/dsa840.md
@@ -26,9 +26,9 @@ Output: 0
 
 Constraints:
 
-row == grid.length
-col == grid[i].length
-1 <= row, col <= 10
-0 <= grid[i][j] <= 15
+- row == grid.length
+- col == grid[i].length
+- 1 <= row, col <= 10
+- 0 <= grid[i][j] <= 15
 
 ---
