--- a/dsa066.md
+++ b/dsa066.md
@@ -35,3 +35,31 @@ Constraints:
 - digits does not contain any leading 0's.
  
 ---
+
+
+```cpp
+
+class Solution {
+public:
+    vector<int> plusOne(vector<int>& v) {
+        int n = v.size();
+        for(int i = n-1; i >= 0; i--){
+            if(i == n-1)
+                v[i]++;
+            if(v[i] == 10){
+                v[i] = 0;
+                if(i != 0){
+                    v[i-1]++;
+                }
+                else{
+                    v.push_back(0);
+                    v[i] = 1;
+                }
+            }
+        }
+        return v;
+    }
+};
+
+
+```
