--- a/dsa961.md
+++ b/dsa961.md
@@ -30,3 +30,17 @@ Constraints:
 - nums contains n + 1 unique elements and one of them is repeated exactly n times.
 
 ---
+
+
+```cpp
+class Solution {
+public:
+    int repeatedNTimes(vector<int>&nums) {
+        for (int i = 0; i < nums.size() - 2; ++i)
+            if (nums[i] == nums[i + 1] || nums[i] == nums[i + 2])
+                return nums[i];
+        return nums.back(); 
+    }
+};
+
+```
