--- a/dsa1339.md
+++ b/dsa1339.md
@@ -28,4 +28,6 @@ Explanation: Remove the red edge and get 2 binary trees with sum 15 and 6.Their 
 Constraints:
 
 - The number of nodes in the tree is in the range [2, 5 * 104].
-- 1 <= Node.val <= 104
+- 1 <= Node.val <= 10^4
+
+---
