--- a/dsa1458.md
+++ b/dsa1458.md
@@ -31,3 +31,29 @@ Constraints:
 
 - 1 <= nums1.length, nums2.length <= 500
 - -1000 <= nums1[i], nums2[i] <= 1000
+
+---
+
+
+```cpp
+class Solution {
+public:
+    int maxDotProduct(vector<int>& nums1, vector<int>& nums2) {
+        const int sz1 = nums1.size(), sz2 = nums2.size();
+        vector<vector<int>> dp(sz1 + 1, vector<int>(sz2 + 1, INT_MIN));
+        
+        for (int i = 1; i <= sz1; ++i) {
+            for (int j = 1; j <= sz2; ++j) {
+                dp[i][j] = max({
+                    nums1[i - 1] * nums2[j - 1] + max(0, dp[i - 1][j - 1]),
+                    dp[i][j - 1], 
+                    dp[i - 1][j], 
+                });
+            }
+        }
+        
+        return dp[sz1][sz2];
+    }
+};
+
+```
