--- a/dsa0865.md
+++ b/dsa0865.md
@@ -1,4 +1,4 @@
-# 865. Smallest Subtree with all the Deepest Nodes
+<img width="593" height="348" alt="image" src="https://github.com/user-attachments/assets/803db516-4013-4a3f-8f10-86d5d0b13ecf" /># 865. Smallest Subtree with all the Deepest Nodes
 Given the root of a binary tree, the depth of each node is the shortest distance to the root.
 
 Return the smallest subtree such that it contains all the deepest nodes in the original tree.
@@ -36,3 +36,40 @@ Constraints:
 - The values of the nodes in the tree are unique.
 
 ---
+
+
+```cpp
+class Solution {
+public:
+    TreeNode* lca( TreeNode* root, TreeNode* p, TreeNode* q ) {
+        if ( !root || root == p || root == q ) return root;
+        TreeNode *left = lca( root->left, p, q );
+        TreeNode *right = lca (root->right, p, q );
+
+        return !left? right: !right? left: root;
+    }
+    
+    TreeNode* subtreeWithAllDeepest(TreeNode* root) {
+        if ( !root || !root->left && !root->right ) return root;
+        TreeNode *leftMost = NULL;
+        TreeNode *rightMost = NULL;
+        
+        queue<TreeNode*> q;
+        q.push(root);
+        while( !q.empty() ) {
+            int levelSize = q.size();
+            for(int level = 0; level < levelSize; level++ ) {
+                TreeNode* node = q.front(); q.pop();
+                if ( level == 0 ) leftMost = node;
+                if ( level == levelSize - 1 ) rightMost = node;
+                
+                if (node->left) q.push(node->left);
+                if (node->right) q.push(node->right);
+                
+            }
+        }
+        return lca( root, leftMost, rightMost );
+    }
+};
+
+```
