--- a/dsa0865.md
+++ b/dsa0865.md
@@ -1,4 +1,4 @@
-<img width="593" height="348" alt="image" src="https://github.com/user-attachments/assets/803db516-4013-4a3f-8f10-86d5d0b13ecf" /># 865. Smallest Subtree with all the Deepest Nodes
+# 865. Smallest Subtree with all the Deepest Nodes
 Given the root of a binary tree, the depth of each node is the shortest distance to the root.
 
 Return the smallest subtree such that it contains all the deepest nodes in the original tree.
