--- a/dsa1266.md
+++ b/dsa1266.md
@@ -34,3 +34,20 @@ Constraints:
 - -1000 <= points[i][0], points[i][1] <= 1000
 
 ---
+
+
+```cpp
+class Solution {
+public:
+    int minTimeToVisitAllPoints(vector<vector<int>>& points) {
+	     	int sum=0;
+	        for(int i=0;i<points.size()-1;i++)
+	        {
+		         sum+=max(abs(points[i][0]-points[i+1][0]),abs(points[i][1]-points[i+1][1]));// Diagonal traversal
+	         }
+	         return sum;
+             }
+    };
+
+
+```
