--- a/dsa3047.md
+++ b/dsa3047.md
@@ -54,10 +54,10 @@ No pair of rectangles intersect, hence, the answer is 0.
 Constraints:
 
 - n == bottomLeft.length == topRight.length
-- 2 <= n <= 103
+- 2 <= n <= 10^3
 - bottomLeft[i].length == topRight[i].length == 2
-- 1 <= bottomLeft[i][0], bottomLeft[i][1] <= 107
-- 1 <= topRight[i][0], topRight[i][1] <= 107
+- 1 <= bottomLeft[i][0], bottomLeft[i][1] <= 10^7
+- 1 <= topRight[i][0], topRight[i][1] <= 10^7
 - bottomLeft[i][0] < topRight[i][0]
 - bottomLeft[i][1] < topRight[i][1]
 
