--- a/dsa1895.md
+++ b/dsa1895.md
@@ -24,7 +24,10 @@ Output: 2
 
 Constraints:
 
-m == grid.length
-n == grid[i].length
-1 <= m, n <= 50
-1 <= grid[i][j] <= 10^6
+- m == grid.length
+- n == grid[i].length
+- 1 <= m, n <= 50
+- 1 <= grid[i][j] <= 10^6
+
+
+---
