--- a/dsa3510.md
+++ b/dsa3510.md
@@ -39,3 +39,76 @@ Constraints:
 - -10^9 <= nums[i] <= 10^9
 
 ---
+
+
+```cpp
+
+class Solution {
+public:
+    int minimumPairRemoval(vector<int>& nums) {
+        int n = nums.size();
+        vector<long long> a(nums.begin(), nums.end());
+
+        vector<int> L(n), R(n);
+        vector<bool> alive(n, true);
+
+        for (int i = 0; i < n; i++) {
+            L[i] = i - 1;
+            R[i] = i + 1;
+        }
+
+        int inversions = 0;
+        for (int i = 0; i + 1 < n; i++) {
+            if (a[i] > a[i + 1]) inversions++;
+        }
+
+        priority_queue<pair<long long,int>,
+            vector<pair<long long,int>>,
+            greater<>> pq;
+
+        for (int i = 0; i + 1 < n; i++) {
+            pq.push({a[i] + a[i + 1], i});
+        }
+
+        int ops = 0;
+
+        while (inversions > 0) {
+            auto [sum, i] = pq.top();
+            pq.pop();
+
+            if (!alive[i] || R[i] == n) continue;
+
+            int j = R[i];
+            if (!alive[j] || a[i] + a[j] != sum) continue;
+
+            // Remove old inversion contributions
+            if (L[i] != -1 && a[L[i]] > a[i]) inversions--;
+            if (a[i] > a[j]) inversions--;
+            if (R[j] != n && a[j] > a[R[j]]) inversions--;
+
+            // Merge i and j
+            a[i] = sum;
+            alive[j] = false;
+            R[i] = R[j];
+            if (R[j] != n) L[R[j]] = i;
+
+            // Add new inversion contributions
+            if (L[i] != -1 && a[L[i]] > a[i]) inversions++;
+            if (R[i] != n && a[i] > a[R[i]]) inversions++;
+
+            // Push new adjacent sums
+            if (L[i] != -1)
+                pq.push({a[L[i]] + a[i], L[i]});
+            if (R[i] != n)
+                pq.push({a[i] + a[R[i]], i});
+
+            ops++;
+        }
+
+        return ops;
+    }
+};
+
+
+
+```
