--- a/dsa1984.md
+++ b/dsa1984.md
@@ -33,3 +33,22 @@ Constraints:
 
 1 <= k <= nums.length <= 1000
 0 <= nums[i] <= 105
+
+---
+
+
+```cpp
+class Solution {
+public:
+    int minimumDifference(vector<int>& nums, int k) {
+        int n = nums.size();
+        sort(nums.begin(), nums.end());
+        int ans = nums[k - 1] - nums[0];
+        for(int i = 0; i + k <= n; i ++){
+            ans = min(ans, nums[i + k - 1] - nums[i]);
+        }
+        return ans;
+    }
+};
+
+```
