--- a/dsa1200.md
+++ b/dsa1200.md
@@ -32,6 +32,29 @@ Constraints:
 ---
 
 ```cpp
+class Solution {
+public:
+    vector<vector<int>> minimumAbsDifference(vector<int>& arr) {
+        int n= arr.size();
+        sort(arr.begin(),arr.end());
+        vector<vector<int>> ans;     
+       
+        // Find minimum difference
+        
+        int diff = INT_MAX;
+        for(int i =0;i<n-1;i++){
+            diff = min(diff , arr[i+1]-arr[i]);
+        }
 
+        // Finding pair with Minimum difference
+
+        for(int i = 0;i<n-1;i++){
+            if(arr[i+1]-arr[i]==diff){
+                ans.push_back({arr[i],arr[i+1]});
+            }
+        }
+        return ans;
+    }
+};
 
 ```
