--- a/dsa645.md
+++ b/dsa645.md
@@ -23,3 +23,33 @@ Constraints:
 - 1 <= nums[i] <= 104
 
 ---
+
+```cpp
+class Solution {
+public:
+    vector<int> findErrorNums(vector<int>& nums) {
+        int n = nums.size();
+        sort(nums.begin(), nums.end());
+        
+        int duplicate = -1;
+        int actualSum = 0;
+        
+        for (int i = 0; i < n; i++) {
+            actualSum += nums[i];
+            // If current number is same as previous, we found the culprit!
+            if (i > 0 && nums[i] == nums[i-1]) {
+                duplicate = nums[i];
+            }
+        }
+        
+        // Math formula for sum of 1 to n
+        int expectedSum = n * (n + 1) / 2;
+        
+        // Missing = Expected - (Actual - Duplicate)
+        int missing = expectedSum - (actualSum - duplicate);
+        
+        return {duplicate, missing};
+    }
+};
+
+```
