--- a/dsa415.md
+++ b/dsa415.md
@@ -26,3 +26,37 @@ num1 and num2 consist of only digits.
 num1 and num2 don't have any leading zeros except for the zero itself.
 
 ---
+
+
+```cpp
+class Solution {
+public:
+    string addStrings(string num1, string num2) {
+        int end1 = num1.size() - 1;
+    int end2 = num2.size() - 1;
+    int carry = 0;
+    string ans;
+
+    while (end1 >= 0 || end2 >= 0 || carry != 0) {
+        int sum = carry;
+
+        if (end1 >= 0) {
+            sum += num1[end1] - '0';
+            end1--;
+        }
+
+        if (end2 >= 0) {
+            sum += num2[end2] - '0';
+            end2--;
+        }
+
+        ans.push_back((sum % 10) + '0');
+        carry = sum / 10;
+    }
+
+    reverse(ans.begin(), ans.end());
+    return ans;
+    }
+};
+
+```
