--- a/dsa3637.md
+++ b/dsa3637.md
@@ -43,5 +43,31 @@ Constraints:
 ---
 
 ```
-
+class Solution {
+public:
+    bool isTrionic(vector<int>& nums) {
+        int n = nums.size();
+        int count = 0;
+        if(nums[0]>=nums[1] || nums[n-1]<=nums[n-2]){
+            return false;
+        }
+        for(int i =1;i<n-1;i++){
+            if(nums[i]==nums[i-1]||nums[i]==nums[i+1]){
+                return false;
+            }
+            else if(nums[i]>nums[i-1]&&nums[i]>nums[i+1]){
+                count++;
+            }
+            else if(nums[i]<nums[i-1]&&nums[i]<nums[i+1]){
+                count++;
+            }
+        }
+        if(count==2){
+            return true;
+        }
+        else{
+            return false;
+        }
+    }
+};
 ```
