--- a/dsa3379.md
+++ b/dsa3379.md
@@ -1,3 +1,5 @@
+# 3379. Transformed Array
+
 You are given an integer array nums that represents a circular array. Your task is to create a new array result of the same size, following these rules:
 
 For each index i (where 0 <= i < nums.length), perform the following independent actions:
