--- a/dsa3379.md
+++ b/dsa3379.md
@@ -42,4 +42,26 @@ Constraints:
 1 <= nums.length <= 100
 -100 <= nums[i] <= 100
  
+---
 
+```cpp
+class Solution {
+public:
+    vector<int> constructTransformedArray(vector<int>& nums) {
+        int n = nums.size();
+        vector<int> original = nums;
+
+        for (int i = 0; i < n; i++) {
+            int newIndex = (i + original[i]) % n;
+            if (newIndex < 0) {
+                newIndex += n;
+            }
+            nums[i] = original[newIndex];
+        }
+
+        return nums;
+    }
+};
+
+
+```
