--- a/dsa3634.md
+++ b/dsa3634.md
@@ -49,3 +49,31 @@ Constraints:
 - 1 <= k <= 105
 
 ---
+
+
+```cpp
+class Solution {
+public:
+    int minRemoval(vector<int>& nums, int k) {
+        int n = nums.size();
+        if (n <= 1) return 0;
+
+        sort(nums.begin(), nums.end());
+
+        int left = 0;
+        int maxSize = 1;
+
+        for (int right = 0; right < n; right++) {
+            while ((long long)nums[right] > (long long)nums[left] * k) {
+                left++;
+            }
+            maxSize = max(maxSize, right - left + 1);
+        }
+
+        return n - maxSize;
+    }
+};
+
+
+
+```
